--- a/AJWebViewInteraction/WebToNative/Login.html
+++ b/AJWebViewInteraction/WebToNative/Login.html
@@ -18,7 +18,7 @@
             //! JS登录成功后loadURL并传参token
             function loginSucceed(token) {
                 var action = "loginSucceed";
-                webToNative(action, token);
+                webNativeBridge.webToNativeWithActionParams(action, token);
             }
             
             //! 登录功能
